--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,20 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
-platform = espressif32
-board = esp32dev
+; [env:esp32dev]
+; platform = espressif32
+; board = esp32dev
+; framework = arduino
+; lib_extra_dirs = ~/Arduino/libraries
+; monitor_speed = 115200
+; monitor_filters = esp32_exception_decoder
+[env:pico]
+; platform = raspberrypi
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = pico
 framework = arduino
+board_build.core = earlephilhower
 lib_extra_dirs = ~/Arduino/libraries
+upload_port = /mnt/pico
+build_flags = -DPIO_FRAMEWORK_ARDUINO_ENABLE_BLUETOOTH
 monitor_speed = 115200
