working in car without need for esp32

--- a/platformio.ini
+++ b/platformio.ini
@@ -25,3 +25,11 @@ lib_extra_dirs = ~/Arduino/libraries
 upload_port = /mnt/pico
 build_flags = -DPIO_FRAMEWORK_ARDUINO_ENABLE_BLUETOOTH
 monitor_speed = 115200
+
+[env:rpipicow_alt]
+platform = https://github.com/maxgerhardt/platform-raspberrypi.git
+board = rpipicow
+framework = arduino
+board_build.core = earlephilhower
+lib_extra_dirs = ~/Arduino/libraries
+build_flags = -DPIO_FRAMEWORK_ARDUINO_ENABLE_BLUETOOTH
